# drf-psn-scraper

./: README.md  pyproject.toml
drf/drf/: settings.py  urls.py
src/drf_psn_scraper/: apps.py  urls.py  views.py
src/drf_psn_scraper/serializers/: __init__.py  edition.py  game.py
