[project]
name = "drf-psn-scraper"
version = "1.0.0"
description = "A Django REST Framework-based API that scrapes product data from the PlayStation Store."
authors = [
    {name = "Hadi Mohseni",email = "hadimohseni1996@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "playstation-store-scraper (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-extensions (>=4.1,<5.0)"
]
